--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             "image": "https://hidalgas.lt/hidalgas-logo.png",
             "url": "https://hidalgas.lt",
             "telephone": "+37067501440",
-            "email": "hidalgas@gmail.com",
+            "email": "mbhidalgas@gmail.com",
             "description": "Profesionalios statybos ir remonto paslaugos Lietuvoje",
             "address": {
                 "@type": "PostalAddress",
@@ -96,7 +96,7 @@
         <img src="hidalgas-logo.png" style="max-width: 70%" alt="Hidalgas - statybos ir remonto paslaugos" />
     </div>
     <div class="contact-container">
-        <div><a href="mailto:hidalgas@gmail.com" aria-label="Siųsti el. laišką adresu hidalgas@gmail.com">hidalgas@gmail.com</a></div>
+        <div><a href="mailto:mbhidalgas@gmail.com" aria-label="Siųsti el. laišką adresu mbhidalgas@gmail.com">mbhidalgas@gmail.com</a></div>
         <div><a href="tel:+37067501440" aria-label="Skambinti telefonu +370 675 01440">+370 675 01440</a></div>
     </div>
     <footer>
